--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nivo/pie": "^0.84.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "jwt-decode": "^4.0.0",
